VERSION 4.0.0 ** DEC 4, 2019 **

-- Rewritten using JDA instead of Javacord due to disconnection issues.
-- New PING command since JDA has that.
-- Moved every command over to JDA.
-- Fixed misc commands toggle.

4.0.1 - changed "MessageReceivedEvent" to "GuildMessageReceivedEvent" due to exceptions 
4.0.2 - Added catch exception in Commands list because DMs might not be open. Also changed text. Updated JDA to 4.0.0_71 from 4.0.0_70
4.0.2-1 Update JDA to 4.0.0_72, fixed a few mistakes i made, and changed token stuff to read from text file.
4.0.3 - JDA to 4.0.0_73, fixed GTP autoban, added more comments
4.0.4 - New command: !randomjoke, JDA 4.0.0_79.
4.1.0 - MESSAGE LOGGING! Log deleted (if they're cached) messages and edited messages. JDA 4.1.0_81
4.1.1 - Fixes for Message logging stuff, JDA version 4.1.0_84. Added a new "clear old messages" function for the cache. By default,the bot clears cache for messages older than 4 days.
4.1.2 - Support for attachments in deleted message logging, switch to Caffeine caching for faster and simpler message caching. JDA 4.1.0_87
**4.2 - January 4, 2020 **
- MyAnimeList searching! 
- Update JDA to 4.1.0_95
- update MessageCache (change EmptyRestAction to CompletedRestAction due to JDA changes)
- Various changes
4.2.1 - Update JDA to 4.1.0_100, add purge command (!msgclr), various fixes
** 4.3 - January 20, 2020 **
- Reddit commands. Do !randpost <subreddit> to find a random top post from a subreddit. 
- Use reddit_token.txt (client id first line, secret 2nd line. Use "Script" option for reddit oauth.)
- Coming soon: Subreddit sort <will be !randpost subreddit sort (top, hot, new, etc)>
- Coming soon: random memes!
- various small changes & fixes.